--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Siddhant Chaudhary
-email: urssidd@gmail.com, chaudhary@cmi.ac.in
+email: urssidd@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -33,6 +33,34 @@ github_username: codetalker7
 remote_theme: sighingnow/jekyll-gitbook
 plugins:
 #  - jekyll-feed
+
+toc:
+  enabled: true
+  h_min: 1
+  h_max: 3
+
+# markdown render engine
+markdown:         kramdown
+kramdown:
+  auto_ids:               true
+  input:                  GFM
+  math_engine:            mathjax
+  smart_quotes:           lsquo,rsquo,ldquo,rdquo
+  toc_levels:             1..6
+  syntax_highlighter:     rouge
+  syntax_highlighter_opts:
+    guess_lang:           true
+
+syntax_highlighter_style: colorful
+
+markdown_ext: markdown,mkdown,mkdn,mkd,md
+
+collections:
+  pages:
+    output: true
+    permalink: /:collection/:path/
+
+page_width: 800px
 
 # Exclude from processing.
 # The following items will not be processed, by default.
