--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,12 @@ syntax_highlighter_style: colorful
 
 markdown_ext: markdown,mkdown,mkdn,mkd,md
 
+# Permalinks
+permalink: /:categories/:year-:month-:day-:title:output_ext
+
+exclude:
+  - _drafts
+
 collections:
   pages:
     output: true
