Added google analytics tag, and modified code.md.

--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,10 @@ collections:
 
 page_width: 800px
 
+# google analytics
+tracker:
+    google_analytics: G-NCPKS7XPGR
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
