--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,23 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you: 
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
+# Configurations
 title: Siddhant Chaudhary
+longtitle: Siddhant Chaudhary 
+author: Siddhant Chaudhary
 email: urssidd@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
     My personal webpage. Find out more about what I do on this site.
-baseurl: "" # the subpath of your site, e.g. /blog
+
+version:          1.0
+gitbook_version:  3.2.3
+
 url: "https://codetalker7.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+rss:              RSS
+
 # twitter_username:
 github_username: codetalker7
 
 # Build settings
 remote_theme: sighingnow/jekyll-gitbook
-plugins:
-#  - jekyll-feed
 
 toc:
   enabled: true
@@ -70,22 +57,11 @@ page_width: 800px
 tracker:
     google_analytics: G-NCPKS7XPGR
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+destination:      ./_site
+incremental:      false
+regenerate:       true
+
+plugins:
+  - jekyll-feed
+  - jekyll-readme-index
+  - jemoji
